--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 .vscode/settings.json
-__pycache__/__init__.cpython-310.pyc
-blender/radiant-rhos.blend1
-__pycache__/rho_spiral_squares.cpython-310.pyc
+__pycache__/*
+blender/*.blend1
